--- a/index.html
+++ b/index.html
@@ -25,15 +25,14 @@
   </header> 
   
   <section class="Educacionsecion">
-    <h3>EDUCACION</h2>
+    <h3>EDUCACION</h3>
     <div class="educacioncontenedor">
       <div class="educacioncenter">
         <h3 class="descripcion">Primaria-Secundaria</h3>
         <p class="descripcion">2012-2017</p>
         <p class="descripcion">
-          Me forme inicialmente en una escuela llamada san nicolas donde curse durante 
+          Me forme inicialmente en una escuela llamada san nicolas donde curse durante 2 años frutiferos
         </p>
-        <p class="descripcion">2 años</p>
       </div>
       <div class="educacioncenter">
         <h3 class="descripcion">Media-Bachillerato</h3>
@@ -45,27 +44,30 @@
   </section>
 
 <h3 class="Experiencia">EXPERIENCIA</h3>
-  <section class="Sesion2">
-    <div></div>
-    <div class="cuadro">
-<p> soy un cuadro</p>
-    </div>
-    <div class="cuadro">
-      <p>soy un cuadro</p>
-    </div>
-    <div class="cuadro">
-      <p>soy un cuadro</p>
-    </div>
-    <div class="cuadro">
-      <p>soy un cuadro</p>
-    </div>
-    
+  <section>
+    <div class="cuboA">
+      <div class="cubo">
+        <h3>Doctor</h3>
+        <p class="descripcion">Durante este periodo de mi vida consegui y recolecte muchos exitos laborales. hice 2025 operaciones de cara tambien hice 15 neuro cirugias cardiotapiacas donde todas fueron un exito</p>
 
+      </div>
+      <div class="cubo">
+        <h3 >Ingeniería Industrial</h3>
+        <p class="descripcion" >Desde muy joven, tuve una fuerte inclinación por los procesos, la optimización y la resolución de problemas complejos, lo que me llevó a estudiar Ingeniería Industrial 
+      </div>
+      <div class="cubo">
+        <h3>Diseñador Gráfico</h3>
+        <p class="descripcion">Desde que tengo memoria, el diseño visual ha sido mi lenguaje natural. Mientras otros niños dibujaban por diversión, me encanta imaginar y crea ideas creativas para resolucion de problemas
+        </p>
+      </div>
+      <div class="cubo">
+        <h3>Psicóloga Clínica</h3>
+        <p class="descripcion">Mi vocación por la psicología no fue repentina; fue un descubrimiento progresivo que nació del deseo profundo de entender el comportamiento humano, el sufrimiento emocional.
+      </div>
+    </div>
   </section>
   
-
-  
-
+ 
   
 </body>
 </html>
