--- a/index.html
+++ b/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hoja de vida</title>
   <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
+
 <body>
   <header>
     <div class="perfil">
-        <div>
-            <h1>Luis Miguel </h1>
-            <h1>Moreno Santos</h1>
-            <p class="estudiante">Estudiante</p>
-        </div>
-      <img class="imagen" src="multimedia/fantasy.jpg" alt="Foto de perfil" >
+      <div>
+        <h1>Luis Miguel </h1>
+        <h1>Moreno Santos</h1>
+        <p class="estudiante">Estudiante</p>
+      </div>
+      <img class="imagen" src="multimedia/fantasy.jpg" alt="Foto de perfil">
       <div>
         <p>3127914881</p>
         <p>morenoluismiguel986@gmail.com</p>
         <p>website.com</p>
-        <a href="#" class="boton">Download Resume</a>
+        <a href="#" class="boton">Descargar</a>
       </div>
     </div>
-  </header> 
-  
+  </header>
+
   <section class="Educacionsecion">
     <h3>EDUCACION</h3>
     <div class="educacioncontenedor">
@@ -40,34 +42,73 @@
         <p class="descripcion">
           Me forme en la insitucion educativa gilberto alzate avendaño durante 9 años
         </p>
-    </div>
+      </div>
+      </div>
   </section>
 
-<h3 class="Experiencia">EXPERIENCIA</h3>
+
   <section>
+    <h3 class="Experiencia">EXPERIENCIA</h3>
     <div class="cuboA">
       <div class="cubo">
         <h3>Doctor</h3>
-        <p class="descripcion">Durante este periodo de mi vida consegui y recolecte muchos exitos laborales. hice 2025 operaciones de cara tambien hice 15 neuro cirugias cardiotapiacas donde todas fueron un exito</p>
+        <p class="descripcion">Durante este periodo de mi vida consegui y recolecte muchos exitos laborales. hice 2025
+          operaciones de cara tambien hice 15 neuro cirugias cardiotapiacas donde todas fueron un exito</p>
 
       </div>
       <div class="cubo">
-        <h3 >Ingeniería Industrial</h3>
-        <p class="descripcion" >Desde muy joven, tuve una fuerte inclinación por los procesos, la optimización y la resolución de problemas complejos, lo que me llevó a estudiar Ingeniería Industrial 
+        <h3>Ingeniería Industrial</h3>
+        <p class="descripcion">Desde muy joven, tuve una fuerte inclinación por los procesos, la optimización y la
+          resolución de problemas complejos, lo que me llevó a estudiar Ingeniería Industrial
       </div>
       <div class="cubo">
         <h3>Diseñador Gráfico</h3>
-        <p class="descripcion">Desde que tengo memoria, el diseño visual ha sido mi lenguaje natural. Mientras otros niños dibujaban por diversión, me encanta imaginar y crea ideas creativas para resolucion de problemas
+        <p class="descripcion">Desde que tengo memoria, el diseño visual ha sido mi lenguaje natural. Mientras otros
+          niños dibujaban por diversión, me encanta imaginar y crea ideas creativas para resolucion de problemas
         </p>
       </div>
       <div class="cubo">
         <h3>Psicóloga Clínica</h3>
-        <p class="descripcion">Mi vocación por la psicología no fue repentina; fue un descubrimiento progresivo que nació del deseo profundo de entender el comportamiento humano, el sufrimiento emocional.
+        <p class="descripcion">Mi vocación por la psicología no fue repentina; fue un descubrimiento progresivo que
+          nació del deseo profundo de entender el comportamiento humano, el sufrimiento emocional.
       </div>
     </div>
-  </section>
+    </section>
+ 
+<section>
+<div class="progres">
+  <div class="cuadrorojo">
+    <div class="ingles">
+      <label>ingles</label>
+      <progress class="barra ingles" value="70" max="100"></progress>
+    </div>
+    <div class="ingles">
+      <label>español</label>
+      <progress class="barra español" value="70" max="100"></progress>
+    </div>
+    <div class="ingles">
+      <label>aleman</label>
+      <progress class="barra aleman" value="70" max="100"></progress>
+    </div>
+    <div class="ingles">
+      <label>italiano</label>
+      <progress class="barra italiano" value="70" max="100"></progress>
+    </div>
+   </div>
   
  
-  
+  <div class="cuadroazul">
+    <div class="redes">
+      <img src="./multimedia/twitter.png" class="icono" alt="">
+      <p>Twitter</p>
+    </div>
+    <div class="redes">
+      <img src="./multimedia/link.png" class="icono" alt="">
+      <p>Linked</p>
+    </div>
+  </div>
+</div>
+</section>
+
 </body>
 </html>
